main.css
@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');

* {
  font-family: 'Open Sans', sans-serif;
}

body {
  background-color: #fff;
}

/* header */
.top-nav {
  background: #fff;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  z-index: 20;
  border-bottom: 1px solid lightgrey;
}

.top-nav img {
 margin: .3% 33%;
 width: 25%;


}

.top-nav a {
  box-sizing: border-box;
  width: 35%;
  display: inline-block;
  text-align: center;
  padding: 5px;
  margin: 2px;
}

.top-nav .fas {
  color: black;
  font-size: 20px;
}

.top-nav .fa-camera-retro {
  float: left;
  margin-top: 5px;
  margin-left: 5%;
}

.top-nav .fa-user-plus {
  float: right;
  margin-right: 5%;
}
/* body */
.container {
  background: #FAFAFA;
  padding-top: 50px;
  position: absolute;
  width: 100%;
  top: 15px;
  overflow: scroll;

}

.card {
  background: #fff;
  margin: 0 auto;
  max-width: 500px;
  border: 1px solid #ccc;
  border-radius: 2px;
  margin-bottom: 25px;
}

.card-header {
  padding: 15px;
}

.profile-img {
  display: inline-block;
  background: blue;
  height: 30px;
  width: 30px;
  border-radius: 50%;
  position: relative;
  top: 5px;
  margin-right: 5px;
}

.profile-info {
  display: inline-block;
}

.name {
  font-size: 14px;
  color: #111;
  font-weight: bold;
}
.location {
  font-size: 12px;
  color: #111;
}
.time {
  display: inline-block;
  float: right;
  font-size: 12px;
  top: 10px;
  position: relative;
}

.content img {
  width: 100%;
}

.card-footer {
  background: #fff;
  padding: 15px;
  box-sizing: border-box;
}

.likes {
  color: #111;
  font-size: 12px;
  padding-bottom: 10px;
}

.description p {
  font-size: 14px;
  margin: 0;
  padding: 0 0 5px 0;
}

.username {
  font-weight: 700;
}

.comments p {
  font-size: 14px;
  margin: 0;
  padding: 0 0 5px 0;
}

hr {
  padding: 0;
}

form {
  padding-top: 15px;
}
.form .fas {
  font-size: 24px;
}
.form .heart {
  display: inline-block;
  width: 7%;
}

.form .heart .fas {
  position: relative;
  top: 3px;
}

.add-comment {
  display: inline-block;
  width: 70%;
}

.add-comment input {
  width: 100%;
  padding: 5px;
  font-size: 1em;
  border: 0px solid #fff;
}
.options {
  display: inline-block;
  width: 7%;
  float: right;
}

.options .fas {
  position: relative;
  top: 3px;
}

/* footer */
footer {
  background: #fff;
  position: fixed;
  bottom: 0;
  left: 0;
  width: 100%;
  z-index: 20;
  margin-bottom: 15px;
}

footer a {
  box-sizing: border-box;
  width: 25%;
  display: inline-block;
  margin-left: -3px;
  text-align: center;
  padding: 12px;
  margin-bottom: 10px;
  background: #fff;
}

.fas {
  color: black;
  font-size: 25px;
}

